# ChangeLog for dev-perl/AnyEvent
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/ChangeLog,v 1.18 2007/03/05 11:02:35 ticho Exp $

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> AnyEvent-2.1.ebuild:
  Stable on x86, bug #169152.

*AnyEvent-2.5.1 (21 Jan 2007)

  21 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +AnyEvent-2.5.1.ebuild:
  Version bump

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> AnyEvent-1.02.ebuild,
  -AnyEvent-2.0.ebuild:
  Cleaning up

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> AnyEvent-2.1.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> AnyEvent-2.1.ebuild:
  Marking amd64 stable

*AnyEvent-2.1 (29 Nov 2006)

  29 Nov 2006; Yuval Yaari <yuval@gentoo.org> +AnyEvent-2.1.ebuild:
  Version bump

*AnyEvent-2.0 (05 Nov 2006)

  05 Nov 2006; Michael Cummings <mcummings@gentoo.org> +AnyEvent-2.0.ebuild:
  Version bump

  30 Sep 2006; <nixnut@gentoo.org> AnyEvent-1.02.ebuild:
  Stable on ppc wrt bug 149348

  17 Aug 2006; Markus Rothe <corsair@gentoo.org> AnyEvent-1.02.ebuild:
  Stable on ppc64

  08 Aug 2006; Joshua Jackson <tsunam@gentoo.org> AnyEvent-1.02.ebuild:
  Stable x86; bug #142424

  06 Aug 2006; Michael Cummings <mcummings@gentoo.org> AnyEvent-1.02.ebuild:
  Marking amd64 stable

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org> AnyEvent-1.02.ebuild:
  Adding perl dep; fixed DEPEND

  04 Aug 2006; Michael Cummings <mcummings@gentoo.org> AnyEvent-1.02.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed DEPEND

  03 Jul 2006; Christian Hartmann <ian@gentoo.org> AnyEvent-1.02.ebuild:
  Fixed RDEPEND wrt bug #134781

  09 Jun 2006; Michael Cummings <mcummings@gentoo.org> AnyEvent-1.02.ebuild:
  Marking stable sparc

  11 Apr 2006; Gustavo Zacarias <gustavoz@gentoo.org> AnyEvent-1.02.ebuild:
  Keyworded ~sparc

  07 Apr 2006; Daniel Goller <morfic@gentoo.org> AnyEvent-1.02.ebuild: