@@ -1,0 +1,3 @@
+MD5 3f74f7fc57e388519d8a5620eb6a6af8 AnyEvent-2.52.tar.gz 12714
+RMD160 9c1a065590c4f4c2f0a517509edcfebfe8dc0fa4 AnyEvent-2.52.tar.gz 12714
+SHA256 badc7f5534e8a0f63238464fcb031230ec31d3d3869d1f270b40d0d7a4a6e466 AnyEvent-2.52.tar.gz 12714
