@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/AnyEvent
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/ChangeLog,v 1.18 2007/03/05 11:02:35 ticho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/AnyEvent/ChangeLog,v 1.19 2007/03/09 21:37:23 mcummings Exp $
+
+*AnyEvent-2.5.2 (09 Mar 2007)
+
+  09 Mar 2007; Michael Cummings <mcummings@gentoo.org>
+  +AnyEvent-2.5.2.ebuild:
+  Version bump
 
   05 Mar 2007; Andrej Kacian <ticho@gentoo.org> AnyEvent-2.1.ebuild:
   Stable on x86, bug #169152.
